mvn configuration refactoring