@@ -1,203 +1,296 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>pl.lolczak</groupId>
-		<artifactId>robo-drive-recorder-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
-	</parent>
+  <parent>
+    <groupId>pl.lolczak</groupId>
+    <artifactId>robo-drive-recorder-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
-	<groupId>pl.lolczak</groupId>
-	<artifactId>robo-drive-recorder</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<packaging>apk</packaging>
-	<name>robo-drive-recorder - Application</name>
+  <groupId>pl.lolczak</groupId>
+  <artifactId>robo-drive-recorder</artifactId>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>apk</packaging>
+  <name>robo-drive-recorder - Application</name>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.google.android</groupId>
-			<artifactId>android</artifactId>
-			<scope>provided</scope>
-		</dependency>
-	</dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>android</groupId>
+      <artifactId>android</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.scaloid</groupId>
+      <artifactId>scaloid_2.10</artifactId>
+      <version>2.3-8</version>
+    </dependency>
+    <dependency>
+      <groupId>com.android.support</groupId>
+      <artifactId>appcompat-v7</artifactId>
+      <version>19.0.2</version>
+      <type>apklib</type>
+    </dependency>
+    <dependency>
+      <groupId>com.android.support</groupId>
+      <artifactId>appcompat-v7</artifactId>
+      <version>19.0.2</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.android.support</groupId>
+      <artifactId>support-v4</artifactId>
+      <version>19.0.2</version>
+      <type>jar</type>
+    </dependency>
+  </dependencies>
 
-	<build>
-		<finalName>${project.artifactId}</finalName>
+  <build>
+    <finalName>${project.artifactId}</finalName>
 
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<!-- use the copy resources instead of resources, which adds it to 
-							the eclipse buildpath -->
-						<phase>initialize</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.basedir}/res</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${project.basedir}/src/templates/res</directory>
-									<targetPath>${project.basedir}/res</targetPath>
-									<filtering>true</filtering>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
-				<artifactId>android-maven-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<manifest>
-						<debuggable>true</debuggable>
-					</manifest>
-				</configuration>
-				<executions>
-					<execution>
-						<id>manifestUpdate</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>manifest-update</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>alignApk</id>
-						<phase>package</phase>
-						<goals>
-							<goal>zipalign</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <executions>
+          <execution>
+            <!-- use the copy resources instead of resources, which adds it to
+              the eclipse buildpath -->
+            <phase>initialize</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.basedir}/res</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${project.basedir}/src/templates/res</directory>
+                  <targetPath>${project.basedir}/res</targetPath>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+        <artifactId>android-maven-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <androidManifestFile>${project.basedir}/AndroidManifest.xml</androidManifestFile>
+          <assetsDirectory>${project.basedir}/assets</assetsDirectory>
+          <resourceDirectory>${project.basedir}/res</resourceDirectory>
+          <nativeLibrariesDirectory>${project.basedir}/src/main/native</nativeLibrariesDirectory>
+          <sdk>
+            <platform>19</platform>
+          </sdk>
+          <deleteConflictingFiles>true</deleteConflictingFiles>
+          <undeployBeforeDeploy>true</undeployBeforeDeploy>
+          <dex>
+            <jvmArguments>
+              <jvmArgument>-Xmx1024M</jvmArgument>
+              <jvmArgument>-XX:MaxPermSize=512M</jvmArgument>
+            </jvmArguments>
+          </dex>
+          <proguard>
+            <skip>false</skip>
+            <config>proguard.conf</config>
+            <jvmArguments>
+              <jvmArgument>-Xmx1024M</jvmArgument>
+            </jvmArguments>
+          </proguard>
+        </configuration>
+        <executions>
+          <execution>
+            <id>manifestUpdate</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>manifest-update</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>alignApk</id>
+            <phase>package</phase>
+            <goals>
+              <goal>zipalign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
 
-	<profiles>
-		<profile>
-			<id>release</id>
-			<!-- via this activation the profile is automatically used when the release 
-				is done with the maven release plugin -->
-			<activation>
-				<property>
-					<name>performRelease</name>
-					<value>true</value>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-jarsigner-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>signing</id>
-								<goals>
-									<goal>sign</goal>
-									<goal>verify</goal>
-								</goals>
-								<phase>package</phase>
-								<inherited>true</inherited>
-								<configuration>
-									<removeExistingSignatures>true</removeExistingSignatures>
-									<archiveDirectory />
-									<includes>
-										<include>${project.build.directory}/${project.artifactId}.apk</include>
-									</includes>
-									<keystore>${sign.keystore}</keystore>
-									<alias>${sign.alias}</alias>
-									<storepass>${sign.storepass}</storepass>
-									<keypass>${sign.keypass}</keypass>
-									<verbose>false</verbose>
-									<arguments>
-										<argument>-sigalg</argument><argument>MD5withRSA</argument>
-										<argument>-digestalg</argument><argument>SHA1</argument>
-									</arguments>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<!-- the signed apk then needs to be zipaligned and we activate proguard 
-						and we run the manifest update -->
-					<plugin>
-						<groupId>com.jayway.maven.plugins.android.generation2</groupId>
-						<artifactId>android-maven-plugin</artifactId>
-						<inherited>true</inherited>
-						<configuration>
-							<release>true</release>
-							<sign>
-								<debug>false</debug>
-							</sign>
-							<zipalign>
-								<skip>false</skip>
-								<verbose>true</verbose>
-								<inputApk>${project.build.directory}/${project.artifactId}.apk</inputApk>
-								<outputApk>${project.build.directory}/${project.artifactId}-signed-aligned.apk
-								</outputApk>
-							</zipalign>
-							<manifest>
-								<debuggable>false</debuggable>
-								<versionCodeAutoIncrement>true</versionCodeAutoIncrement>
-							</manifest>
-							<!-- Change to true to skip Proguard -->
-							<proguard>
-								<skip>false</skip>
-								<config>proguard.conf</config>
-							</proguard>
-						</configuration>
-						<executions>
-							<execution>
-								<id>manifestUpdate</id>
-								<phase>process-resources</phase>
-								<goals>
-									<goal>manifest-update</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>alignApk</id>
-								<phase>package</phase>
-								<goals>
-									<goal>zipalign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>build-helper-maven-plugin</artifactId>
-						<configuration>
-							<artifacts>
-								<artifact>
-									<file>${project.build.directory}/${project.artifactId}-signed-aligned.apk</file>
-									<type>apk</type>
-									<classifier>signed-aligned</classifier>
-								</artifact>
-								<artifact>
-									<file>${project.build.directory}/proguard/mapping.txt</file>
-									<type>map</type>
-									<classifier>release</classifier>
-								</artifact>
-							</artifacts>
-						</configuration>
-						<executions>
-							<execution>
-								<id>attach-signed-aligned</id>
-								<phase>package</phase>
-								<goals>
-									<goal>attach-artifact</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+      <plugin>
+        <groupId>org.scala-tools</groupId>
+        <artifactId>maven-scala-plugin</artifactId>
+        <version>2.15.2</version>
+        <configuration>
+          <scalaVersion>${scala.version}</scalaVersion>
+        </configuration>
+        <executions>
+          <execution>
+            <id>scala-compile-first</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>add-source</goal>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.7</version>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>src/main/scala</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
+  <!--<profiles>
+    <profile>
+      <id>release</id>
+      &lt;!&ndash; via this activation the profile is automatically used when the release
+        is done with the maven release plugin &ndash;&gt;
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jarsigner-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>signing</id>
+                <goals>
+                  <goal>sign</goal>
+                  <goal>verify</goal>
+                </goals>
+                <phase>package</phase>
+                <inherited>true</inherited>
+                <configuration>
+                  <removeExistingSignatures>true</removeExistingSignatures>
+                  <archiveDirectory />
+                  <includes>
+                    <include>${project.build.directory}/${project.artifactId}.apk</include>
+                  </includes>
+                  <keystore>${sign.keystore}</keystore>
+                  <alias>${sign.alias}</alias>
+                  <storepass>${sign.storepass}</storepass>
+                  <keypass>${sign.keypass}</keypass>
+                  <verbose>false</verbose>
+                  <arguments>
+                    <argument>-sigalg</argument><argument>MD5withRSA</argument>
+                    <argument>-digestalg</argument><argument>SHA1</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          &lt;!&ndash; the signed apk then needs to be zipaligned and we activate proguard
+            and we run the manifest update &ndash;&gt;
+          <plugin>
+            <groupId>com.jayway.maven.plugins.android.generation2</groupId>
+            <artifactId>android-maven-plugin</artifactId>
+            <inherited>true</inherited>
+            <configuration>
+              <release>true</release>
+              <sign>
+                <debug>false</debug>
+              </sign>
+              <zipalign>
+                <skip>false</skip>
+                <verbose>true</verbose>
+                <inputApk>${project.build.directory}/${project.artifactId}.apk</inputApk>
+                <outputApk>${project.build.directory}/${project.artifactId}-signed-aligned.apk
+                </outputApk>
+              </zipalign>
+              <manifest>
+                <debuggable>false</debuggable>
+                <versionCodeAutoIncrement>true</versionCodeAutoIncrement>
+              </manifest>
+              &lt;!&ndash; Change to true to skip Proguard &ndash;&gt;
+              <proguard>
+                <skip>false</skip>
+                <config>proguard.conf</config>
+              </proguard>
+            </configuration>
+            <executions>
+              <execution>
+                <id>manifestUpdate</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>manifest-update</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>alignApk</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>zipalign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <configuration>
+              <artifacts>
+                <artifact>
+                  <file>${project.build.directory}/${project.artifactId}-signed-aligned.apk</file>
+                  <type>apk</type>
+                  <classifier>signed-aligned</classifier>
+                </artifact>
+                <artifact>
+                  <file>${project.build.directory}/proguard/mapping.txt</file>
+                  <type>map</type>
+                  <classifier>release</classifier>
+                </artifact>
+              </artifacts>
+            </configuration>
+            <executions>
+              <execution>
+                <id>attach-signed-aligned</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>attach-artifact</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>-->
 </project>
